--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,86 @@
 .intro{
-    background-color: lightseagreen;
+    background-color: white;
+    display: flex;
+
+    .left{
+        flex:0.5;
+        // background-color: blueviolet;
+        overflow: hidden;
+        // border: 1px solid black ;
+
+        .imgcont{
+            // margin: 0px;
+            width: 700px;
+            height: 700px;
+            background-color: rgb(255, 8, 8);
+            // border-radius: 50% 50% 50% 0% ;
+            border-radius: 15% 30%;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            float: right;
+            // padding-left: 300px;
+
+
+
+            img{
+                height: 100%;
+                // width: 700px;
+                width: 100%;
+            }
+        }
+
+
+    }
+
+    .right{
+        flex:0.5;
+        // background-color: aqua;
+        position: relative;
+
+        .wrapper{
+            width: 100%;    
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1{
+                font-size: 60px;
+                margin: 10px 0;
+            }
+            h2{
+                font-size: 35px;
+            }
+            h3{
+                font-size: 30px;
+            }
+
+            span{
+                font-size: 40px;
+                color: crimson;
+                font-family: inherit;
+            }
+
+        }
+
+        a{
+            position: absolute;
+            bottom: 10px;
+            left:50%;
+
+
+            img{
+                width: 30px;
+                animation: arrowBlink 2s infinite;
+            }
+
+            @keyframes arrowBlink{
+                100%{
+                    opacity:0;
+                }
+            }
+        }
+    }
 }
