--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,81 @@
+@import '../../global.scss';
+
 .portfolio{
-    background-color: lightpink;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+
+    h1{
+        font-size: 50px;
+    }
+
+    ul{
+        margin: 10px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+
+
+
+        li{
+            font-size: 14px;
+            margin-right: 50px;
+            padding: 7px;
+            border-radius: 10px;
+            cursor: pointer;
+
+            &.active{
+                background-color: $mainColor;
+                color: white;
+            }
+        }
+    }
+
+    .cont{
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap:wrap ;
+
+        .item{
+            width: 220px;
+            height: 200px;
+            border-radius: 12px;
+            border: 1px solid gray;
+            margin: 10px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            position: relative;
+            transition: all 1s ease;
+            cursor: pointer;
+
+            h3{
+                position: absolute;
+                font-size: 20px;
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+
+            }
+
+            &:hover{
+                background-color: $mainColor;
+
+                img{
+                    opacity: 0.4;
+                    z-index: 0;
+                    // transition: 1s all ease;
+                }
+            }
+        }
+    }
 }
