--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,13 +1,14 @@
 @import '../../global.scss';
 
 .portfolio{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(252, 255, 195);
     display: flex;
     flex-direction: column;
     align-items:center;
 
     h1{
         font-size: 50px;
+        margin-top: 30px;
     }
 
     ul{
