--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,112 @@
 .works{
-    background-color: lightcyan;
+    background-color: rgb(113, 225, 253);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+
+    .arrow{
+        height: 50px;
+        position: absolute;
+        cursor: pointer;
+
+        &.left{
+            left:100px;
+            transform: rotateY(180deg);
+        }
+
+        &.right{
+            right: 100px;            
+        }
+    }
+
+    .slider{
+        height: 350px;
+        display: flex;
+        position: absolute;
+        left: 0vw;   
+        transition: all 1s ease-out;
+
+        .cont{
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+
+            .item{
+                width: 700px;
+                height: 100%;
+                background-color: white;
+                border-radius: 20px;
+                display:flex;
+                align-items: center;
+                justify-content: center;
+
+
+                .left{
+                    flex: 4;
+                    height: 80%;
+                    // background-color: lightcoral;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+
+
+                    .leftcont{
+                        width: 90%;
+                        height: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+
+                        .imgcont{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            background-color: lightpink;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+
+                            img{
+                                width: 25px;
+                            }
+                        }
+                        h2{
+                            font-size: 20px;
+                        }
+                        p{
+                            font-size: 13px;
+                        }
+                        span{
+                            font-size: 12px;
+                            font-weight: 600;
+                            text-decoration: underline;
+                        }
+                    }
+                }
+
+                .right{
+                    flex: 8;
+                    height: 100%;
+                    // background-color: aquamarine;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    overflow: hidden;
+
+
+                    img{
+                        width: 400px;
+                        transform: rotate(-10deg);
+                    }  
+                }
+            }
+        }
+    }
 }
